kubernetes/apps/network/chisel/app/httproute-opencode.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: work-opencode
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - work.opencode.goyangi.io
  rules:
    - backendRefs:
        - name: chisel
          port: 4097
